columns generalization